--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -17,7 +17,7 @@
             <img src="/Recursos/images/Configuracion.png" alt="Configuracion">
         </button>
         <div class="logout-menu" id="logoutMenu">
-            <a href="#" class="logout-option">Cerrar sesión</a>
+            <a href="/index.html" class="logout-option">Cerrar sesión</a>
         </div>
     </header>
     <div class="sidebar">
