--- a/registro.html
+++ b/registro.html
@@ -50,6 +50,6 @@
         <p>2024 PetCare. Todos los derechos reservados</p>
     </footer>
 
-    <script src="Recursos/Scripts/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
