Se agrega redirección para crear mascota

--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -29,7 +29,7 @@
                         GESTIÓN DE MASCOTAS
                     </a>
                     <ul class="submenu">
-                        <li><a href="#">
+                        <li><a href="crearmascota.html">
                                 <img src="/Recursos/images/AñadirMascota.png" alt="Crear Mascota" class="menu-icon">
                                 CREAR MASCOTA
                             </a></li>
